fornt  sıfırdan tema düzenleme 2. bölüm

--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -78,6 +78,10 @@ body{
     color: #9ea1a2;
     text-decoration: none;
 }
+.swiper {
+    width: 100%;
+    height: 200px;
+}
 
 .swiper-most-popular, .swiper-youtube, .swiper-authors, .swiper-suggest-article {
     width: 100%;
