--- a/resources/views/layouts/front.html
+++ b/resources/views/layouts/front.html
@@ -6,16 +6,22 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Emre Yaman yazilim front sıfırdan </title>
-    <link rel="stylesheet" href="../../../public/assets/front/css">
     <link rel="stylesheet" href="../../../public/assets/front/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../../public/assets/front/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="../../../public/assets/front/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../../../public/assets/front/css/style.css">
 </head>
 <body>
 <header class="bg-white shadow-sm">
@@ -33,7 +39,8 @@
                 <span class="material-symbols-outlined" id="searchIcon1">search</span>
                 <form action="" class="position-relative" style="display: none" id="searchForm">
                     <input type="text" name="search_text" id="serach_text" placeholder="Arama">
-                    <span class="material-symbols-outlined position-absolute" id="searchIcon2" style="right: 0;top: 0;bottom: 0;">search</span>
+                    <span class="material-symbols-outlined position-absolute" id="searchIcon2"
+                          style="right: 0;top: 0;bottom: 0;">search</span>
 
                 </form>
             </div>
@@ -77,21 +84,157 @@
         </div>
     </div>
 </header>
+<div class="container ">
+    <section class="feature-categories container">
+        <div class="row">
+            <div class="col-md-3 p-3">
+                <div
+                    style=" background: url('https://fakeimg.pl/600x400') no-repeat center center;
+                        background-size: cover;
+                        height: 300px"
+                    class="p-4 position-relative">
+                    <h2 class="text-center text-secondary">asdasd</h2>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet, consecteturat impedit incidunt ipsa natus
+                        quaerat redolore ducimus enim ipsum quaerat reprehenderit veritatis!</p>
+                    <p class="position-absolute" style="bottom: 10px; left: 10px; right: 10px;"> impedit incidunt ipsa
+                        lore </p>
+                </div>
+
+            </div>
+            <div class="col-md-3 p-3">
+                <div
+                    style=" background: url('https://fakeimg.pl/600x400') no-repeat center center;
+                        background-size: cover;
+                        height: 300px"
+                    class="p-4 position-relative">
+                    <h2 class="text-center text-secondary">asdasd</h2>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet, consecteturat impedit incidunt ipsa natus
+                        quaerat redolore ducimus enim ipsum quaerat reprehenderit veritatis!</p>
+                    <p class="position-absolute" style="bottom: 10px; left: 10px; right: 10px;"> impedit incidunt ipsa
+                        lore </p>
+                </div>
+
+            </div>
+            <div class="col-md-3 p-3">
+                <div
+                    style=" background: url('https://fakeimg.pl/600x400') no-repeat center center;
+                        background-size: cover;
+                        height: 300px"
+                    class="p-4 position-relative">
+                    <h2 class="text-center text-secondary">asdasd</h2>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet, consecteturat impedit incidunt ipsa natus
+                        quaerat redolore ducimus enim ipsum quaerat reprehenderit veritatis!</p>
+                    <p class="position-absolute" style="bottom: 10px; left: 10px; right: 10px;"> impedit incidunt ipsa
+                        lore </p>
+                </div>
+
+            </div>
+            <div class="col-md-3 p-3">
+                <div
+                    style=" background: url('https://fakeimg.pl/600x400') no-repeat center center;
+                        background-size: cover;
+                        height: 300px"
+                    class="p-4 position-relative">
+                    <h2 class="text-center text-secondary">zzzz</h2>
+                    <p style="text-align:justify">Lorem ipsum dolor sit amet, consecteturat impedit incidunt ipsa natus
+                        quaerat redolore ducimus enim ipsum quaerat reprehenderit veritatis!</p>
+                    <p class="position-absolute" style="bottom: 10px; left: 10px; right: 10px;"> impedit incidunt ipsa
+                        lore </p>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <main>
+        <div class="row">
+            <div class="col-md-9">
+                <section class="most-popular row">
+                    <div class="popular-title col-md-8">
+                        <h2 class="font-montserrat fw-semibold">En çok okunan Makaleler</h2>
+                    </div>
+                    <div class=" col-4">
+                        <div class="most-popular-swiper-navigation text-end">
+                            <span class="btn btn-secondary material-symbols-outlined most-popular-swiper-button-prev">arrow_back</span>
+                            <span class="btn btn-secondary material-symbols-outlined most-popular-swiper-button-next">arrow_forward </span>
+                        </div>
+                    </div>
+                    <div class="swiper">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper mt-3">
+                            <!-- Slides -->
+
+                            <div class="swiper-slide">
+                                <div class="">
+                                    <a href="#">
+                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="">
+                                    <a href="#">
+                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="">
+                                    <a href="#">
+                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="">
+                                    <a href="#">
+                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!-- If we need pagination -->
+                        <div class="swiper-pagination"></div>
+
+                        <!-- If we need navigation buttons -->
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+
+                        <!-- If we need scrollbar -->
+                        <div class="swiper-scrollbar"></div>
+                    </div>
+                </section>
+            </div>
+            <div class="col-md-3">
+                <section class="categories bg-white shadow-sm">
+                    <h4 class="bg-light text-secondary p-3 border-bottom border-1 border-light m-0">Kategoriler</h4>
+                    <ul class="list-group m-0">
+                        <li class="py-3 px-3"><a href="">html<span class="text-info float-end me-3">&#x25cf;</span></a>
+                        </li>
+                        <li class="py-3 px-3"><a href="">html<span class="text-info float-end me-3">&#x25cf;</span></a>
+                        </li>
+                        <li class="py-3 px-3"><a href="">html<span class="text-info float-end me-3">&#x25cf;</span></a>
+                        </li>
+                        <li class="py-3 px-3"><a href="">html<span class="text-info float-end me-3">&#x25cf;</span></a>
+                        </li>
+                        <li class="py-3 px-3"><a href="">html<span class="text-info float-end me-3">&#x25cf;</span></a>
+                        </li>
+                        <li class="py-3 px-3"><a href="">html<span class="text-info float-end me-3">&#x25cf;</span></a>
+                        </li>
+                    </ul>
 
 
-<script src="../../../public/assets/front/js/bootstrap.min.js"></script>
+                </section>
+            </div>
+        </div>
+    </main>
+</div>
 <!--<script src="../../../public/assets/front/js/bootstrap.bundle.min.js"></script>-->
 <script src="../../../public/assets/front/js/jquery.min.js"></script>
-<script>
-    $('#searchIcon2').click(function () {
-        $("#searchForm").hide();
-        $('#searchIcon1').show();
-    });
-    $('#searchIcon1').click(function () {
-        $(this).hide();
-        $('#searchForm').show();
-    });
+<script src="../../../public/assets/front/swiper/swiper-bundle.min.js"></script>
+<script src="../../../public/assets/front/js/bootstrap.min.js"></script>
+<script src="../../../public/assets/front/js/main.js"></script>
 
-</script>
 </body>
 </html>
