front  ön panel   & style.css  & main.js

--- a/resources/views/layouts/front.html
+++ b/resources/views/layouts/front.html
@@ -84,10 +84,10 @@
         </div>
     </div>
 </header>
-<div class="container ">
-    <section class="feature-categories container">
+<div class="container">
+    <section class="container mt-4">
         <div class="row">
-            <div class="col-md-3 p-3">
+            <div class="col-md-3 p-3  ">
                 <div
                     style=" background: url('https://fakeimg.pl/600x400') no-repeat center center;
                         background-size: cover;
@@ -146,7 +146,7 @@
 
         </div>
     </section>
-    <main>
+    <main class="mt-5">
         <div class="row">
             <div class="col-md-9">
                 <section class="most-popular row">
@@ -165,44 +165,72 @@
                             <!-- Slides -->
 
                             <div class="swiper-slide">
-                                <div class="">
-                                    <a href="#">
-                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
-                                    </a>
+                                <a href="#">
+                                    <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                </a>
+                                <div class="swiper-most-popular mt-2">
+                                    <div class="most-popular-author">
+                                        Yapımcı yazar <a href="#">Emre Yaman yazilim</a>
+                                    </div>
+                                    <div class="most-popular-title">
+                                        <h4 class="text-black"><a href="#">Açıklama açıklama</a></h4>
+                                    </div>
+                                    <div class="most-popular-date">
+                                        <span>19 ocak 2024</span>&#x25CF;<span>10 dk</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="">
-                                    <a href="#">
-                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
-                                    </a>
+                                <a href="#">
+                                    <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                </a>
+                                <div class="swiper-most-popular mt-2">
+                                    <div class="most-popular-author">
+                                        Yapımcı yazar <a href="#">Emre Yaman yazilim</a>
+                                    </div>
+                                    <div class="most-popular-title">
+                                        <h4 class="text-black"><a href="#">Açıklama açıklama</a></h4>
+                                    </div>
+                                    <div class="most-popular-date">
+                                        <span>19 ocak 2024</span>&#x25CF;<span>10 dk</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="">
-                                    <a href="#">
-                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
-                                    </a>
+                                <a href="#">
+                                    <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                </a>
+                                <div class="swiper-most-popular mt-2">
+                                    <div class="most-popular-author">
+                                        Yapımcı yazar <a href="#">Emre Yaman yazilim</a>
+                                    </div>
+                                    <div class="most-popular-title">
+                                        <h4 class="text-black"><a href="#">Açıklama açıklama</a></h4>
+                                    </div>
+                                    <div class="most-popular-date">
+                                        <span>19 ocak 2024</span>&#x25CF;<span>10 dk</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="">
-                                    <a href="#">
-                                        <img src="https://fakeimg.pl/600x400" class="img-fluid">
-                                    </a>
+                                <a href="#">
+                                    <img src="https://fakeimg.pl/600x400" class="img-fluid">
+                                </a>
+                                <div class="swiper-most-popular mt-2">
+                                    <div class="most-popular-author">
+                                        Yapımcı yazar <a href="#">Emre Yaman yazilim</a>
+                                    </div>
+                                    <div class="most-popular-title">
+                                        <h4 class="text-black"><a href="#">Açıklama açıklama</a></h4>
+                                    </div>
+                                    <div class="most-popular-date">
+                                        <span>19 ocak 2024</span>&#x25CF;<span>10 dk</span>
+                                    </div>
                                 </div>
                             </div>
+
 
                         </div>
-                        <!-- If we need pagination -->
-                        <div class="swiper-pagination"></div>
-
-                        <!-- If we need navigation buttons -->
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-
-                        <!-- If we need scrollbar -->
-                        <div class="swiper-scrollbar"></div>
                     </div>
                 </section>
             </div>
